--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,8 +27,7 @@ jobs:
         with:
           node-version: 16
 
-      - if: startsWith(matrix.os, 'ubuntu')
-        name: Install Python
+      - name: Install Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
@@ -36,7 +35,7 @@ jobs:
       - name: Install npm packages 
         run: make install
 
-      - name: ESLint
+      - name: Lint
         run: make lint
 
       - name: Publish Electron
