--- a/source/onnx-metadata.json
+++ b/source/onnx-metadata.json
@@ -3415,6 +3415,62 @@
     ]
   },
   {
+    "name": "BitwiseAnd",
+    "module": "ai.onnx",
+    "version": 18,
+    "support_level": "common",
+    "description": "Returns the tensor resulting from performing the bitwise `and` operation\nelementwise on the input tensors `A` and `B` (with Numpy-style broadcasting support).\n\nThis operator supports **multidirectional (i.e., Numpy-style) broadcasting**; for more details please check [the doc](https://github.com/onnx/onnx/blob/master/docs/Broadcasting.md).\n",
+    "inputs": [
+      {
+        "name": "A",
+        "type": "T",
+        "description": "First input operand for the bitwise operator."
+      },
+      {
+        "name": "B",
+        "type": "T",
+        "description": "Second input operand for the bitwise operator."
+      }
+    ],
+    "min_input": 2,
+    "max_input": 2,
+    "outputs": [
+      {
+        "name": "C",
+        "type": "T",
+        "description": "Result tensor."
+      }
+    ],
+    "min_output": 1,
+    "max_output": 1,
+    "type_constraints": [
+      {
+        "description": "Constrain input to integer tensors.",
+        "type_param_str": "T",
+        "allowed_type_strs": [
+          "tensor(uint8)",
+          "tensor(uint16)",
+          "tensor(uint32)",
+          "tensor(uint64)",
+          "tensor(int8)",
+          "tensor(int16)",
+          "tensor(int32)",
+          "tensor(int64)"
+        ]
+      }
+    ],
+    "examples": [
+      {
+        "summary": "bitwiseand",
+        "code": "node = onnx.helper.make_node(\n    \"BitwiseAnd\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"bitwiseand\"],\n)\n\n# 2d\nx = np.random.randn(3, 4).astype(np.int32)\ny = np.random.randn(3, 4).astype(np.int32)\nz = np.bitwise_and(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_bitwise_and_i32_2d\")\n\n# 3d\nx = np.random.randn(3, 4, 5).astype(np.int16)\ny = np.random.randn(3, 4, 5).astype(np.int16)\nz = np.bitwise_and(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_bitwise_and_i16_3d\")"
+      },
+      {
+        "summary": "bitwiseand_broadcast",
+        "code": "node = onnx.helper.make_node(\n    \"BitwiseAnd\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"bitwiseand\"],\n)\n\n# 3d vs 1d\nx = np.random.randn(3, 4, 5).astype(np.uint64)\ny = np.random.randn(5).astype(np.uint64)\nz = np.bitwise_and(x, y)\nexpect(\n    node, inputs=[x, y], outputs=[z], name=\"test_bitwise_and_ui64_bcast_3v1d\"\n)\n\n# 4d vs 3d\nx = np.random.randn(3, 4, 5, 6).astype(np.uint8)\ny = np.random.randn(4, 5, 6).astype(np.uint8)\nz = np.bitwise_and(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_bitwise_and_ui8_bcast_4v3d\")"
+      }
+    ]
+  },
+  {
     "name": "BitwiseNot",
     "module": "ai.onnx",
     "version": 18,
@@ -3458,6 +3514,118 @@
       {
         "summary": "bitwisenot",
         "code": "node = onnx.helper.make_node(\n    \"BitwiseNot\",\n    inputs=[\"x\"],\n    outputs=[\"bitwise_not\"],\n)\n\n# 2d\nx = np.random.randn(3, 4).astype(np.int32)\ny = np.bitwise_not(x)\nexpect(node, inputs=[x], outputs=[y], name=\"test_bitwise_not_2d\")\n\n# 3d\nx = np.random.randn(3, 4, 5).astype(np.uint16)\ny = np.bitwise_not(x)\nexpect(node, inputs=[x], outputs=[y], name=\"test_bitwise_not_3d\")\n\n# 4d\nx = np.random.randn(3, 4, 5, 6).astype(np.uint8)\ny = np.bitwise_not(x)\nexpect(node, inputs=[x], outputs=[y], name=\"test_bitwise_not_4d\")"
+      }
+    ]
+  },
+  {
+    "name": "BitwiseOr",
+    "module": "ai.onnx",
+    "version": 18,
+    "support_level": "common",
+    "description": "Returns the tensor resulting from performing the bitwise `or` operation\nelementwise on the input tensors `A` and `B` (with Numpy-style broadcasting support).\n\nThis operator supports **multidirectional (i.e., Numpy-style) broadcasting**; for more details please check [the doc](https://github.com/onnx/onnx/blob/master/docs/Broadcasting.md).\n",
+    "inputs": [
+      {
+        "name": "A",
+        "type": "T",
+        "description": "First input operand for the bitwise operator."
+      },
+      {
+        "name": "B",
+        "type": "T",
+        "description": "Second input operand for the bitwise operator."
+      }
+    ],
+    "min_input": 2,
+    "max_input": 2,
+    "outputs": [
+      {
+        "name": "C",
+        "type": "T",
+        "description": "Result tensor."
+      }
+    ],
+    "min_output": 1,
+    "max_output": 1,
+    "type_constraints": [
+      {
+        "description": "Constrain input to integer tensors.",
+        "type_param_str": "T",
+        "allowed_type_strs": [
+          "tensor(uint8)",
+          "tensor(uint16)",
+          "tensor(uint32)",
+          "tensor(uint64)",
+          "tensor(int8)",
+          "tensor(int16)",
+          "tensor(int32)",
+          "tensor(int64)"
+        ]
+      }
+    ],
+    "examples": [
+      {
+        "summary": "bitwiseor",
+        "code": "node = onnx.helper.make_node(\n    \"BitwiseOr\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"bitwiseor\"],\n)\n# 2d\nx = np.random.randn(3, 4).astype(np.int32)\ny = np.random.randn(3, 4).astype(np.int32)\nz = np.bitwise_or(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_bitwise_or_i32_2d\")\n\n# 4d\nx = np.random.randn(3, 4, 5, 6).astype(np.int8)\ny = np.random.randn(3, 4, 5, 6).astype(np.int8)\nz = np.bitwise_or(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_bitwise_or_i16_4d\")"
+      },
+      {
+        "summary": "bitwiseor_broadcast",
+        "code": "node = onnx.helper.make_node(\n    \"BitwiseOr\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"bitwiseor\"],\n)\n\n# 3d vs 1d\nx = np.random.randn(3, 4, 5).astype(np.uint64)\ny = np.random.randn(5).astype(np.uint64)\nz = np.bitwise_or(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_bitwise_or_ui64_bcast_3v1d\")\n\n# 4d vs 3d\nx = np.random.randn(3, 4, 5, 6).astype(np.uint8)\ny = np.random.randn(4, 5, 6).astype(np.uint8)\nz = np.bitwise_or(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_bitwise_or_ui8_bcast_4v3d\")"
+      }
+    ]
+  },
+  {
+    "name": "BitwiseXor",
+    "module": "ai.onnx",
+    "version": 18,
+    "support_level": "common",
+    "description": "Returns the tensor resulting from performing the bitwise `xor` operation\nelementwise on the input tensors `A` and `B` (with Numpy-style broadcasting support).\n\nThis operator supports **multidirectional (i.e., Numpy-style) broadcasting**; for more details please check [the doc](https://github.com/onnx/onnx/blob/master/docs/Broadcasting.md).\n",
+    "inputs": [
+      {
+        "name": "A",
+        "type": "T",
+        "description": "First input operand for the bitwise operator."
+      },
+      {
+        "name": "B",
+        "type": "T",
+        "description": "Second input operand for the bitwise operator."
+      }
+    ],
+    "min_input": 2,
+    "max_input": 2,
+    "outputs": [
+      {
+        "name": "C",
+        "type": "T",
+        "description": "Result tensor."
+      }
+    ],
+    "min_output": 1,
+    "max_output": 1,
+    "type_constraints": [
+      {
+        "description": "Constrain input to integer tensors.",
+        "type_param_str": "T",
+        "allowed_type_strs": [
+          "tensor(uint8)",
+          "tensor(uint16)",
+          "tensor(uint32)",
+          "tensor(uint64)",
+          "tensor(int8)",
+          "tensor(int16)",
+          "tensor(int32)",
+          "tensor(int64)"
+        ]
+      }
+    ],
+    "examples": [
+      {
+        "summary": "bitwiseor_broadcast",
+        "code": "node = onnx.helper.make_node(\n    \"BitwiseXor\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"bitwisexor\"],\n)\n\n# 3d vs 1d\nx = np.random.randn(3, 4, 5).astype(np.uint64)\ny = np.random.randn(5).astype(np.uint64)\nz = np.bitwise_xor(x, y)\nexpect(\n    node, inputs=[x, y], outputs=[z], name=\"test_bitwise_xor_ui64_bcast_3v1d\"\n)\n\n# 4d vs 3d\nx = np.random.randn(3, 4, 5, 6).astype(np.uint8)\ny = np.random.randn(4, 5, 6).astype(np.uint8)\nz = np.bitwise_xor(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_bitwise_xor_ui8_bcast_4v3d\")"
+      },
+      {
+        "summary": "bitwisexor",
+        "code": "node = onnx.helper.make_node(\n    \"BitwiseXor\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"bitwisexor\"],\n)\n\n# 2d\nx = np.random.randn(3, 4).astype(np.int32)\ny = np.random.randn(3, 4).astype(np.int32)\nz = np.bitwise_xor(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_bitwise_xor_i32_2d\")\n\n# 3d\nx = np.random.randn(3, 4, 5).astype(np.int16)\ny = np.random.randn(3, 4, 5).astype(np.int16)\nz = np.bitwise_xor(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_bitwise_xor_i16_3d\")"
       }
     ]
   },
